[6-78] style fixes on small screens

--- a/exalearn-ui/src/app/components/header/header.component.scss
+++ b/exalearn-ui/src/app/components/header/header.component.scss
@@ -14,8 +14,10 @@
 		flex: 1;
 		display: flex;
 		flex-direction: row;
+		justify-content: space-between;
 		max-width: $app-width;
 		margin: 0 auto;
+		padding: 0 20px;
 
 		.logo-container {
 			display: flex;
@@ -26,9 +28,7 @@
 		}
 
 		.logout-btn {
-			flex: 1;
-			display: flex;
-			justify-content: flex-end;
+			display: none;
 
 			.header-btn {
 				margin-right: 20px;
@@ -43,6 +43,17 @@
 	}
 	.logo-full {
 		width: 180px;
+	}
+	.header {
+		.header-contents {
+			padding: 0;
+
+			.logout-btn {
+				flex: 1;
+				display: flex;
+				justify-content: flex-end;
+			}
+		}
 	}
 }
 
